# esper-lite

./: .coverage  .coverage.nyx.foundryside.dev.1468582.XvFyBMux  .env  .env.example  .eslintrc.json  .gitignore  .mcp.json  .mutmut-config.py  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_MANIFESTO.md  README.md  ROADMAP.md  config-6seed.json  config.json  coverage.json  defensive_patterns.yaml  gpu_sync_whitelist.yaml  leyline_boundaries.yaml  loomweave.yaml  package-lock.json  profile_v3_features.py  pyproject.toml  pytest.ini  test_import_cycle.py  weft.toml
.claude/: settings.json
.claude/agents/: drl-expert.md  elspeth-ux-specialist.md  pytorch-expert.md
.claude/commands/: create-bible.md
.codacy/: cli.sh  codacy.yaml
.codacy/tools-configs/: pylint.rc
.codex/: config.toml
.github/workflows/: ci.yml  test-suite.yml
_archive/: .env.example  .eslintignore  RC1_BLOCKERS.md  RC1_WORKPACKAGES.md  WP0_EXECUTION_PLAN.md  pyproject.toml
_archive/docs/: architecture_diagrams.md
_archive/infra/: docker-compose.observability.yml  docker-compose.redis.yml
_archive/poc/: parallel_generate.sh  poc.py  simic_test_collection.py
_archive/scripts/: capture_perf_phase0_baselines.py  capture_tamiyo_risk_fixture.py  check_shared_memory.py  check_shared_types.py  generate_leyline.py  profile_graph_capture.py  profile_tolaria.py  run_async_worker_soak.py  run_compile_bench.py  run_graph_bench.py  run_kasmina_seed_benchmark.py  run_kasmina_seed_soak.py  run_nissa_service.py  run_rc1_harness.py  start_all_infra.sh  stop_all_infra.sh  tamiyo_wal_backup.py  tamiyo_wal_soak.py
archive/arch-analysis/: simic-reward-functions.md
archive/arch-analysis-2026-06-13-0836/: 00-coordination.md  02-simic-tamiyo-training-loop-health.md
archive/arch-analysis-2026-06-13-1138-telemetry-health/: 00-coordination.md  01-telemetry-feed-inventory.md  04-tracker-ready-issue-map.md
configs/: config-10slot-deep-impaired.json  config-10slot-deep-multichannel.json  config-1slot-1seed-impaired-shaped.json  config-3slot-1seed-impaired-shaped.json  config-3slot-2seed-escrow.json  config-3slot-2seed-simplified.json  config-3slot-3seed-baseline-basic.json  config-3slot-3seed-baseline-basic_plus.json  config-3slot-3seed-baseline-escrow.json  config-3slot-3seed-baseline-shaped.json  config-3slot-3seed-baseline-simplified.json  config-3slot-3seed-impaired-basic_plus.json  config-3slot-3seed-impaired-escrow.json  config-3slot-3seed-impaired-shaped.json  config-3slot-3seed-impaired-simplified.json  config-3slot-highres.json  config-3slot-postpool.json  config-5slot.json  config-6slot-multichannel.json
configs/ablations/: ab_shaped_vs_simplified.json  no_anti_gaming.json  no_pbrs.json  no_terminal.json  pure_sparse.json  shaped_baseline.json  simplified_baseline.json
contracts/leyline/: leyline.proto
docs/: KNOWLEDGE_MANAGEMENT.md  README.md  arch-analysis-tolaria-2025-12-24.md  architecture_diagrams.md  architecture_summary.md  mcp-setup.md  poc_results.md
docs/analysis/: 2025-12-24-tamiyo-brain-expanded-design.md  2025-12-24-tamiyo-brain-ux-design.md  2025-12-24-tamiyo-diagnostics-drl-review.md  2026-01-03-training-failure-analysis.md  2026-06-13-arch-health-task-slotting.md  2026-06-13-proof-confounder-baseline.md  2026-06-13-proof-rehearsal.md  2026-06-15-bf16-artifact-quarantine.md  2026-06-15-reward-efficiency-proof-packet.md  2026-06-15-shadow-review-followups.md  2026-06-15-whats-left-rom.md
docs/arch-analysis-2025-11-28-1714/: 01-file-classification.md
docs/arch-analysis-2025-11-28-2223/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md  05-quality-assessment.md  06-architect-handover.md  07-migration-gap-analysis.md  README.md  SUMMARY.md
docs/coord/: PLAN_TRACKER.md  (+2 more)
infra/: docker-compose.observability.yml  docker-compose.redis.yml  docker-compose.weatherlight.yml
jules/: README.md  architecture.md  development_guide.md  terminology.md
scripts/: assert_dependabot_advisories.py  bench_kasmina.py  bench_kasmina_prefetch.py  benchmark_hot_path.py  capture_tolaria_epoch_fixture.py  check_cross_subsystem_imports.py  check_infra.sh  check_shared_types.py  checkpoint_audit.py  ci_weft_parity.py  codex_audit_common.py  codex_bug_hunt.py  compile_leyline.py  drain_telemetry_streams.py  ev_liftoff_experiment.py  generate_leyline.py  generate_overwatch_types.py  lifecycle_phase1_inventory.sh  lifecycle_phase4_inventory.sh  lint_defensive_patterns.py  lint_gpu_sync.py  lint_leyline_types.py  parallel_generate.sh  phase5_reward_calibration.py  profile_float64_conversion.py  profile_get_action.py  profile_gpu_sync.py  profile_hot_path_operations.py  profile_record_stream.py  profile_telemetry_hitches.py  profile_v3_features.py  profile_with_torch_profiler.py  proof_packet.py  run_demo.py  run_fault_drills.py  run_integration.sh  run_telemetry_routing_load.py  smoke_test_vectorized.py  split_paper.py  test_fast.sh  (+4 more)
sme-reports/: kasmina.md  leyline.md  nissa.md  scripts.md  simic-core.md  simic-data.md  simic-rewards-features.md  simic-training.md  tamiyo.md  tolaria.md
tests/: conftest.py  helpers.py  spike_dynamic_slots.py  strategies.py  test_action_enums.py  test_action_masking.py  test_action_unification.py  test_blueprint_registry.py  test_heuristic_tamiyo.py  test_host.py  test_host_protocol.py  test_import_isolation.py  test_kasmina_telemetry.py  test_learning_rate_config.py  test_leyline.py  test_lifecycle_fix.py  test_loss_primary_rewards.py  test_morphogenetic_model.py  test_nissa_analytics.py  test_observation_normalization.py  test_recurrent_vectorized.py  test_rent_grace.py  test_sanity_logging.py  test_seed_slot.py  test_seed_telemetry.py  test_simic.py  test_simic_buffers.py  test_simic_config.py  test_simic_features.py  test_simic_fossilize_shaping.py  test_simic_gradient_collector.py  test_simic_networks.py  test_simic_normalization.py  test_simic_ppo.py  test_simic_rewards.py  test_simic_vectorized.py  test_stabilization_tracking.py  test_tamiyo_tracker.py  test_task_spec.py  test_tinystories.py  (+5 more)
(+3141 files in other folders)
