[project]
name = "esper-lite"
version = "0.1.0"
description = "Morphogenetic neural network training - proof of concept"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "numpy>=1.24.0",
    "hypothesis>=6.148.3",
    "datasets>=4.4.1",
    "transformers>=4.57.3",
    "typing_extensions>=4.5.0",  # For override decorator on Python <3.12
    "rich>=13.0",  # TUI for training monitoring
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
