[project]
name = "esper-lite"
version = "0.1.0"
description = "Morphogenetic neural network training - proof of concept"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.18.0", # CIFAR-10 data loading
    "numpy>=1.24.0",
    "hypothesis>=6.148.3",
    "datasets>=4.4.1",
    "transformers>=4.57.3",
    "typing_extensions>=4.5.0", # For override decorator on Python <3.12
    "rich>=13.0", # TUI for training monitoring
    "ruff>=0.14.9",
    "pydantic>=2.0.0", # Config validation for Nissa
    "PyYAML>=6.0", # Config file parsing
    "duckdb>=1.4.3",
    "mcp>=1.25.0",
    "psutil>=5.9.0",  # System resource monitoring for Sanctum
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
]
tui = [
    "textual>=0.47.0",
]
wandb = [
    "wandb>=0.16.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include built frontend assets for Overwatch dashboard
"esper.karn.overwatch" = ["web/dist/**/*"]

[tool.mutmut]
# Mutmut v3: Configure paths here, run with: uv run mutmut run
# Default: Tamiyo + Kasmina state engine (slot.py). Expand to full Kasmina if needed.
paths_to_mutate = ["src/esper/tamiyo/", "src/esper/kasmina/slot.py"]
tests_dir = ["tests/"]
runner = "PYTHONPATH=src uv run pytest -q -x"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-psutil>=7.1.3.20251211",
    "types-tqdm>=4.67.0",
]

# Type checking configuration
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["esper"]
# Phase 2-3: Stricter checks without full strict mode (incremental adoption)
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true

# Exclude patterns
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
]

# Per-module overrides for strictness gradients
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Tests can be less strict

[[tool.mypy.overrides]]
module = "esper.leyline.telemetry"
strict = true  # Typed payloads must be fully strict

[[tool.mypy.overrides]]
module = [
    "esper.karn.sanctum.aggregator",
    "esper.karn.sanctum.schema",
    "esper.karn.sanctum.snapshot_copy",
]
strict = true  # Data layer must be strict

# Textual-based UI modules: disable 'misc' errors for "Class cannot subclass Any"
# Textual doesn't ship complete type stubs, so Static/Container/Message/Screen
# appear as Any to mypy. These are false positives from the framework limitation.
[[tool.mypy.overrides]]
module = [
    "esper.karn.sanctum.widgets.*",
    "esper.karn.sanctum.app",
]
disable_error_code = ["misc"]

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "transformers.*",
    "datasets.*",
    "rich.*",
    "textual.*",
    "duckdb.*",
    "mcp.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*",
    "wandb",
    "wandb.*",
]
ignore_missing_imports = true
