[project]
name = "esper-lite"
version = "0.1.0"
description = "Morphogenetic neural network training - proof of concept"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.18.0", # CIFAR-10 data loading
    "numpy>=1.24.0",
    "hypothesis>=6.148.3",
    "datasets>=4.4.1",
    "transformers>=4.57.3",
    "typing_extensions>=4.5.0", # For override decorator on Python <3.12
    "rich>=13.0", # TUI for training monitoring
    "ruff>=0.14.9",
    "pydantic>=2.0.0", # Config validation for Nissa
    "PyYAML>=6.0", # Config file parsing
    "duckdb>=1.4.3",
    "mcp>=1.25.0",
    "psutil>=5.9.0",  # System resource monitoring for Sanctum
    "filigree==1.2.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
]
tui = [
    "textual>=0.47.0",
]
wandb = [
    "wandb>=0.16.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include built frontend assets for Overwatch dashboard
"esper.karn.overwatch" = ["web/dist/**/*"]

[tool.mutmut]
# Mutmut v3: Configure paths here, run with: uv run mutmut run
# Default: Tamiyo + Kasmina state engine (slot.py) + Simic reward function surface.
# Reward modes (escrow/shaped/simplified/sparse/basic) share the same implementation file.
paths_to_mutate = [
    "src/esper/tamiyo/",
    "src/esper/kasmina/slot.py",
    "src/esper/simic/rewards/rewards.py",
]
tests_dir = ["tests/tamiyo/", "tests/kasmina/", "tests/simic/rewards/"]
# Keep mutation testing focused on the fast/stable suite.
pytest_add_cli_args_test_selection = ["-m", "not integration and not stress and not property"]
# Tests import from `src/` via `pytest.ini`'s `pythonpath=src`, so mutmut needs enough of the
# source tree available inside `mutants/` (not just the mutated paths). Avoid copying the full
# `src/` tree because it may include local `node_modules/` from Overwatch web development.
also_copy = [
    "pytest.ini",
    "src/esper/__init__.py",
    "src/esper/kasmina/",
    "src/esper/leyline/",
    "src/esper/nissa/",
    "src/esper/runtime/",
    "src/esper/simic/",
    "src/esper/tamiyo/",
    "src/esper/tolaria/",
    "src/esper/utils/",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "mypy>=1.19.1",
    "types-psutil>=7.1.3.20251211",
    "types-tqdm>=4.67.0",
    "textual>=0.47.0", # TUI widgets - needed for test imports
    "types-pyyaml>=6.0.12.20250915",
    "pyrate-limiter>=4.0.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.1",
]

# Type checking configuration
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["esper", "tests"]
# Phase 2-3: Stricter checks without full strict mode (incremental adoption)
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true

# Exclude patterns
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^mutants/",  # Mutation testing workspace - duplicates src/esper/
]

# Per-module overrides for strictness gradients
# Tests: Very relaxed - many tests intentionally trigger type errors to verify type safety.
# We only catch egregious issues like syntax errors and missing imports.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = [
    "union-attr",   # Tests access payload unions without narrowing (intentional)
    "arg-type",     # Many negative tests pass wrong types (intentional)
    "operator",     # Tests verify operator behavior with wrong types
    "no-untyped-call",  # Tests call untyped fixtures
    "no-untyped-def",   # Test functions/fixtures don't need full annotations
    "misc",         # Read-only property tests, etc.
    "attr-defined", # Some tests verify missing attribute handling
    "type-arg",     # Generic type parameters not needed in tests
    "var-annotated", # Variable annotations not needed in tests
    "no-any-return", # Tests can return Any
    "index",        # Tests verify indexing behavior
    "assignment",   # Tests verify assignment constraints
    "call-arg",     # Tests verify argument handling
    "list-item",    # Tests can have heterogeneous lists
    "untyped-decorator", # Test decorators (pytest.fixture, etc.)
    "unused-ignore", # Existing type: ignore comments become redundant with relaxed settings
]

# Scripts are developer tools, not production code - relaxed strictness
[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "esper.leyline.telemetry"
strict = true  # Typed payloads must be fully strict

[[tool.mypy.overrides]]
module = [
    "esper.karn.sanctum.aggregator",
    "esper.karn.sanctum.schema",
    "esper.karn.sanctum.snapshot_copy",
]
strict = true  # Data layer must be strict

# Textual-based UI modules: disable 'misc' errors for "Class cannot subclass Any"
# Textual doesn't ship complete type stubs, so Static/Container/Message/Screen
# appear as Any to mypy. These are false positives from the framework limitation.
[[tool.mypy.overrides]]
module = [
    "esper.karn.sanctum.widgets.*",
    "esper.karn.sanctum.app",
]
disable_error_code = ["misc"]

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "transformers.*",
    "datasets.*",
    "rich.*",
    "textual.*",
    "duckdb.*",
    "mcp.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*",
    "wandb",
    "wandb.*",
]
ignore_missing_imports = true
